force-app/main/default/objects/TechnicalRequirement__c/fields/ToleranceType__c.field-meta.xml
<CustomField>
    <fullName>ToleranceType__c</fullName>
    <label>Tolerance Type</label>
    <length>12</length>
    <type>Text</type>
</CustomField>