force-app/main/default/objects/TechnicalRequirement__c/fields/USHTesting__c.field-meta.xml
<CustomField>
    <fullName>USHTesting__c</fullName>
    <label>HZV - USH Testing (St.20+21)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>