force-app/main/default/objects/TechnicalRequirement__c/fields/WSAin__c.field-meta.xml
<CustomField>
    <fullName>WSAin__c</fullName>
    <label>WSA in % (St.34+35)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>