force-app/main/default/objects/TechnicalRequirement__c/recordTypes/TechnicalRequirement.recordType-meta.xml
<RecordType>
    <fullName>TechnicalRequirement</fullName>
    <active>true</active>
    <label>Technical Requirement</label>
</RecordType>