force-app/main/default/objects/TechnicalRequirement__c/recordTypes/TechnicalRequirementLight.recordType-meta.xml
<RecordType>
    <fullName>TechnicalRequirementLight</fullName>
    <active>true</active>
    <label>Technical Requirement Light</label>
</RecordType>