force-app/main/default/objects/TechnicalRequirement__c/validationRules/CheckAccountOnTRandOpportunitySameOrNot.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccountOnTRandOpportunitySameOrNot</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.Id  &lt;&gt;   Opportunity__r.AccountId</errorConditionFormula>
    <errorMessage>The selected opportunity is associated with another account. Please select an opportunity that corresponds to the account specified on the technical requirement.</errorMessage>
</ValidationRule>