force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationForLength.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForLength</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.ByPassLogic__c.ByPassValidation__c),
IF($Profile.Name ==&apos;SAG Sales&apos;,TRUE,FALSE),
NOT(ISBLANK( Opportunity__c)),
Opportunity__r.RecordType.DeveloperName = &quot;Opportunitywithquotecreations&quot;,
NOT(ISBLANK( Product__c ) ),
NOT(ISPICKVAL(Product__r.Family, &quot;Wire Rod&quot;)),
OR(
ISBLANK( LengthFrom__c ),
ISBLANK( LengthTo__c )
 )
)</errorConditionFormula>
<errorMessage>You have selected a bar steel product, please fill in the following fields: Length from, Length to</errorMessage>
</ValidationRule>