force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationForProductGroupBusinessArea.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForProductGroupBusinessArea</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( BusinessArea__c, &quot;ZZ&quot; ),
ISBLANK( TEXT(ProductGroupBusinessArea__c) ),
NOT( $Setup.ByPassLogic__c.ByPassValidation__c )
)</errorConditionFormula>
    <errorDisplayField>ProductGroupBusinessArea__c</errorDisplayField>
    <errorMessage>Please enter a value for product group business area since the business area selected is drawing grades and requires further segmentation.</errorMessage>
</ValidationRule>