force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationForRingWeight.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForRingWeight</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.ByPassLogic__c.ByPassValidation__c),
IF($Profile.Name ==&apos;SAG Sales&apos;,TRUE,FALSE),
NOT(ISBLANK( Opportunity__c)),
Opportunity__r.RecordType.DeveloperName = &quot;Opportunitywithquotecreations&quot;,
NOT(ISBLANK( Product__c ) ),
(ISPICKVAL(Product__r.Family, &quot;Wire Rod&quot;)),
OR(
ISNull( RingWeightMax__c ),
ISNull( RingWeightMin__c ),
ISNull( RingWeightApprox__c )
)
)</errorConditionFormula>
    <errorMessage>You have selected a wire rod product, please fill in the following fields: Ring Weight Max., Ring Weight Min., Ring Weight Approx.</errorMessage>
</ValidationRule>