force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationForToleranceB.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForToleranceB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT($Setup.ByPassLogic__c.ByPassValidation__c),
  IF($Profile.Name ==&apos;SAG Sales&apos;,TRUE,FALSE),
  NOT(ISBLANK(  Opportunity__c)),
  Opportunity__r.RecordType.DeveloperName = &quot;Opportunitywithquotecreations&quot;,
  NOT(ISBLANK( Product__c ) ),
  Product__r.Flat__c = True,
OR(
  ISNull( ToleranceBPlus__c ),
  ISNull( ToleranceBMinus__c ) 
)
)</errorConditionFormula>
    <errorMessage>You have selected a flat product, please fill in the following fields: Tolerance B+, Tolerance B-</errorMessage>
</ValidationRule>