force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationOnMandatoryFields.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnMandatoryFields</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
  NOT($Setup.ByPassLogic__c.ByPassValidation__c),
  IF($Profile.Name ==&apos;SAG Sales&apos;,TRUE,FALSE),
  NOT(ISBLANK( Opportunity__c)),
  Opportunity__r.RecordType.DeveloperName = &quot;Opportunitywithquotecreations&quot;,
OR(
 ISBLANK( CustomerSteelGrade__c),
 ISBLANK( Quantity__c ),
 ISBLANK( ToleranceAPlus__c ),
 ISBLANK( ToleranceAMinus__c ),
 ISBLANK( TEXT(Certificate__c)),
 AND( ISBLANK(FinishedGoods__c),(ISBLANK(TEXT(BusinessArea__c))))
)
)</errorConditionFormula>
    <errorMessage>Please fill in these mandatory fields to create an Technical requirement: Opportunity, Account, Customer Steel Grade, Quantity, Business Area, Tolerance A+, Tolerance A-, Certificate (Attest)</errorMessage>
</ValidationRule>