force-app/main/default/objects/TechnicalRequirement__c/validationRules/ValidationWhenOpportunityInQualityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationWhenOpportunityInQualityCheck</fullName>
    <active>true</active>
    <description>Validates if only the Quality user and admin has the ability to edit the TR when the related Opportunity is in Quality Check.</description>
    <errorConditionFormula>AND(  NOT(ISCLONE()),
      NOT(ISNEW()),
OR( AND(ISPICKVAL(Opportunity__r.StageName, &apos;Quality Check&apos;),AND($Profile.Name &lt;&gt; &quot;Systemadministrator&quot;, $Profile.Name &lt;&gt; &quot;SAG Quality Profile&quot;)), 
   AND (NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Quality Check&apos;)), Opportunity__r.RecordType.DeveloperName  = &apos;Opportunitywithquotecreations&apos;,IF($Profile.Name ==&apos;SAG Quality Profile&apos;, True, False) )
   ),NOT($Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>No changes are possible during processing by the Quality department.</errorMessage>
</ValidationRule>